--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,11 +1,11 @@
-sonar.projectKey=ringcentral_testring
+sonar.projectKey=danbao_testring
 sonar.sources=.
 sonar.exclusions=**/node_modules/**
 sonar.test.inclusions=packages/**/*.spec.ts
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
 sonar.typescript.tsconfigPath=tsconfig.json
 
-sonar.links.homepage=https://github.com/ringcentral/testring
-sonar.links.ci=https://travis-ci.com/ringcentral/testring
-sonar.links.scm=https://github.com/ringcentral/testring
-sonar.links.issue=https://github.com/ringcentral/testring/issues
+sonar.links.homepage=https://github.com/danbao/testring
+sonar.links.ci=https://github.com/danbao/testring/actions
+sonar.links.scm=https://github.com/danbao/testring
+sonar.links.issue=https://github.com/danbao/testring/issues
