--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,10 +1,9 @@
 sonar.projectKey=danbao_testring
 sonar.organization=danbao-github
 sonar.sources=.
-sonar.exclusions=**/node_modules/**
-sonar.test.inclusions=packages/**/*.spec.ts
-sonar.typescript.lcov.reportPaths=coverage/lcov.info
-sonar.typescript.tsconfigPath=tsconfig.json
+sonar.exclusions=**/node_modules/**;**/test/**
+sonar.test.inclusions=packages/**/*.spec.ts,packages/**/*.spec.js,core/**/*.spec.ts,core/**/*.spec.js
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
 
 sonar.links.homepage=https://github.com/danbao/testring
 sonar.links.ci=https://github.com/danbao/testring/actions
