--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,8 @@
 sonar.projectKey=danbao_testring
 sonar.organization=danbao-github
 sonar.sources=.
-sonar.exclusions=**/node_modules/**;**/test/**
-sonar.test.inclusions=packages/**/*.spec.ts,packages/**/*.spec.js,core/**/*.spec.ts,core/**/*.spec.js
+sonar.exclusions=**/node_modules/**
+sonar.test.inclusions=**/*.spec.ts,packages/**/*.spec.js
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 
 sonar.links.homepage=https://github.com/danbao/testring
