--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,8 +2,8 @@ sonar.projectKey=danbao_testring
 sonar.organization=danbao-github
 sonar.sources=.
 sonar.exclusions=**/node_modules/**
-sonar.test.inclusions=**/*.spec.ts,packages/**/*.spec.js
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.test.inclusions=**/*.spec.ts,**/*.spec.js
+sonar.javascript.lcov.reportPaths=.coverage/lcov.info
 
 sonar.links.homepage=https://github.com/danbao/testring
 sonar.links.ci=https://github.com/danbao/testring/actions
