--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,11 +1,11 @@
-sonar.projectKey=danbao_testring
-sonar.organization=danbao-github
+sonar.projectKey=ringcentral_testring
+sonar.organization=ringcentral
 sonar.sources=.
 sonar.exclusions=**/node_modules/**
 sonar.test.inclusions=**/*.spec.ts,**/*.spec.js
 sonar.javascript.lcov.reportPaths=.coverage/lcov.info
 
-sonar.links.homepage=https://github.com/danbao/testring
-sonar.links.ci=https://github.com/danbao/testring/actions
-sonar.links.scm=https://github.com/danbao/testring
-sonar.links.issue=https://github.com/danbao/testring/issues
+sonar.links.homepage=https://github.com/ringcentral/testring
+sonar.links.ci=https://github.com/ringcentral/testring/actions
+sonar.links.scm=https://github.com/ringcentral/testring
+sonar.links.issue=https://github.com/ringcentral/testring/issues
