--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -36,3 +36,10 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+    - name: Coveralls
+      if: ${{ matrix.os=='ubuntu-latest' && matrix.node-version=='16'}}
+      uses: coverallsapp/github-action@master
+      with:
+        path-to-lcov: './.coverage/lcov.info'
+        github-token: ${{ secrets.GITHUB_TOKEN }}
