--- a/packages/plugin-selenium-driver/package.json
+++ b/packages/plugin-selenium-driver/package.json
@@ -17,7 +17,7 @@
     "@testring/types": "0.6.0",
     "@types/deepmerge": "2.2.0",
     "@types/node": "14.17.6",
-    "chromedriver": "*",
+    "chromedriver": "107.0.1",
     "deepmerge": "4.2.2",
     "selenium-server": "3.141.59",
     "webdriverio": "7.20.7"
