--- a/packages/devtool-frontend/package.json
+++ b/packages/devtool-frontend/package.json
@@ -15,18 +15,19 @@
   "devDependencies": {
     "@testring/client-ws-transport": "0.6.0",
     "@testring/types": "0.6.0",
-    "@types/react": "16.7.18",
-    "@types/react-dom": "16.0.11",
-    "@types/webpack": "4.4.22",
-    "css-loader": "2.1.0",
-    "monaco-editor-webpack-plugin": "1.7.0",
-    "react": "16.7.0",
-    "react-dom": "16.7.0",
-    "react-monaco-editor": "0.22.0",
-    "style-loader": "0.23.1",
-    "ts-loader": "8.0.2",
-    "url-loader": "1.1.2",
-    "webpack": "4.28.4",
-    "webpack-cli": "3.2.1"
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.10",
+    "@types/webpack": "5.28.0",
+    "css-loader": "6.7.3",
+    "monaco-editor-webpack-plugin": "7.0.1",
+    "path-browserify": "1.0.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-monaco-editor": "0.51.0",
+    "style-loader": "3.3.1",
+    "ts-loader": "9.4.2",
+    "url-loader": "4.1.1",
+    "webpack": "5.75.0",
+    "webpack-cli": "5.0.1"
   }
 }
