--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,7 +14,7 @@ jobs:
   build:
     strategy:
       matrix:
-        node-version: [14, 16, 18]
+        node-version: [16, 18]
         os: [ubuntu-latest, macos-latest]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
@@ -29,6 +29,7 @@ jobs:
     - run: npm ci
     - run: npm run build
     - run: npm run test:ci
+    - run: npm run test:e2e
 
     - name: Coveralls
       if: ${{ matrix.os=='ubuntu-latest' && matrix.node-version=='16'}}
