--- a/packages/devtool-frontend/package.json
+++ b/packages/devtool-frontend/package.json
@@ -20,6 +20,7 @@
     "@types/webpack": "5.28.0",
     "css-loader": "6.7.3",
     "monaco-editor-webpack-plugin": "7.0.1",
+    "os-browserify": "0.3.0",
     "path-browserify": "1.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
