--- a/packages/plugin-selenium-driver/package.json
+++ b/packages/plugin-selenium-driver/package.json
@@ -16,8 +16,8 @@
     "@testring/plugin-api": "0.6.0",
     "@testring/types": "0.6.0",
     "@types/deepmerge": "2.2.0",
-    "@types/node": "14.17.6",
-    "chromedriver": "*",
+    "@types/node": "18.11.18",
+    "chromedriver": "latest",
     "deepmerge": "4.2.2",
     "selenium-server": "3.141.59",
     "webdriverio": "7.20.7"
