--- a/lerna.json
+++ b/lerna.json
@@ -13,7 +13,9 @@
       "allowBranch": [
         "master",
         "wat*",
-        "WAT*"
+        "WAT*",
+        "xtap*",
+        "XTAP*"
       ]
     }
   },
