--- a/packages/plugin-fs-store/package.json
+++ b/packages/plugin-fs-store/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@testring/plugin-fs-store",
+  "private": true,
   "version": "0.6.0",
   "description": "fs storage & default plugin",
   "main": "./dist/index.js",
