--- a/packages/plugin-selenium-driver/package.json
+++ b/packages/plugin-selenium-driver/package.json
@@ -20,6 +20,7 @@
     "chromedriver": "*",
     "deepmerge": "4.2.2",
     "selenium-server": "3.141.59",
-    "webdriverio": "7.20.7"
+    "webdriverio": "7.20.7",
+    "@ringcentral/code-coverage-client": "1.4.0"
   }
 }
