--- a/packages/devtool-frontend/package.json
+++ b/packages/devtool-frontend/package.json
@@ -25,6 +25,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-monaco-editor": "0.51.0",
+    "monaco-editor": "0.34.1",
     "style-loader": "3.3.1",
     "ts-loader": "9.4.2",
     "url-loader": "4.1.1",
