--- a/packages/http-api/package.json
+++ b/packages/http-api/package.json
@@ -19,6 +19,7 @@
     "@types/node": "18.11.18",
     "@types/request-promise-native": "1.0.18",
     "@types/tough-cookie": "4.0.2",
+    "request": "2.88.2",
     "request-promise-native": "1.0.9",
     "tough-cookie": "4.1.2"
   }
