--- a/packages/plugin-selenium-driver/package.json
+++ b/packages/plugin-selenium-driver/package.json
@@ -18,7 +18,7 @@
     "@testring/types": "0.6.3",
     "@types/deepmerge": "2.2.0",
     "@types/node": "18.11.18",
-    "chromedriver": "*",
+    "chromedriver": "110.0.0",
     "deepmerge": "4.2.2",
     "selenium-server": "3.141.59",
     "webdriverio": "7.20.7"
