--- a/core/child-process/package.json
+++ b/core/child-process/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@testring/child-process",
-  "version": "0.6.7",
+  "version": "0.6.7-alpha.0",
   "main": "./dist/index.js",
   "types": "./src/index.ts",
   "repository": {
@@ -8,8 +8,8 @@
     "url": "https://github.com/ringcentral/testring.git"
   },
   "dependencies": {
-    "@testring/types": "0.6.7",
-    "@testring/utils": "0.6.7"
+    "@testring/types": "0.6.7-alpha.0",
+    "@testring/utils": "0.6.7-alpha.0"
   },
   "author": "RingCentral",
   "license": "MIT"
