--- a/core/cli/package.json
+++ b/core/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@testring/cli",
-  "version": "0.6.7",
+  "version": "0.6.7-alpha.0",
   "main": "./dist/index.js",
   "types": "./src/index.ts",
   "repository": {
@@ -10,19 +10,19 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/browser-proxy": "0.6.7",
-    "@testring/cli-config": "0.6.7",
-    "@testring/devtool-backend": "0.6.7",
-    "@testring/fs-reader": "0.6.7",
-    "@testring/fs-store": "0.6.7",
-    "@testring/http-api": "0.6.7",
-    "@testring/logger": "0.6.7",
-    "@testring/plugin-api": "0.6.7",
-    "@testring/test-run-controller": "0.6.7",
-    "@testring/test-worker": "0.6.7",
-    "@testring/transport": "0.6.7",
-    "@testring/types": "0.6.7",
-    "@testring/web-application": "0.6.7",
+    "@testring/browser-proxy": "0.6.7-alpha.0",
+    "@testring/cli-config": "0.6.7-alpha.0",
+    "@testring/devtool-backend": "0.6.7-alpha.0",
+    "@testring/fs-reader": "0.6.7-alpha.0",
+    "@testring/fs-store": "0.6.7-alpha.0",
+    "@testring/http-api": "0.6.7-alpha.0",
+    "@testring/logger": "0.6.7-alpha.0",
+    "@testring/plugin-api": "0.6.7-alpha.0",
+    "@testring/test-run-controller": "0.6.7-alpha.0",
+    "@testring/test-worker": "0.6.7-alpha.0",
+    "@testring/transport": "0.6.7-alpha.0",
+    "@testring/types": "0.6.7-alpha.0",
+    "@testring/web-application": "0.6.7-alpha.0",
     "@types/node": "18.11.18",
     "@types/yargs": "15.0.13",
     "yargs": "15.4.1"
