--- a/core/fs-store/package.json
+++ b/core/fs-store/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@testring/fs-store",
-  "version": "0.6.7",
+  "version": "0.6.7-alpha.0",
   "description": "fs storage & operations service",
   "keywords": [
     "fs",
@@ -15,13 +15,13 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/cli-config": "0.6.7",
-    "@testring/logger": "0.6.7",
-    "@testring/pluggable-module": "0.6.7",
-    "@testring/test-utils": "0.6.7",
-    "@testring/transport": "0.6.7",
-    "@testring/types": "0.6.7",
-    "@testring/utils": "0.6.7"
+    "@testring/cli-config": "0.6.7-alpha.0",
+    "@testring/logger": "0.6.7-alpha.0",
+    "@testring/pluggable-module": "0.6.7-alpha.0",
+    "@testring/test-utils": "0.6.7-alpha.0",
+    "@testring/transport": "0.6.7-alpha.0",
+    "@testring/types": "0.6.7-alpha.0",
+    "@testring/utils": "0.6.7-alpha.0"
   },
   "scripts": {
     "test": "mocha"
