--- a/core/sandbox/package.json
+++ b/core/sandbox/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@testring/sandbox",
-  "version": "0.6.7",
+  "version": "0.6.7-alpha.0",
   "main": "./dist/index.js",
   "types": "./src/index.ts",
   "repository": {
@@ -10,9 +10,9 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/api": "0.6.7",
-    "@testring/test-utils": "0.6.7",
-    "@testring/types": "0.6.7",
-    "@testring/utils": "0.6.7"
+    "@testring/api": "0.6.7-alpha.0",
+    "@testring/test-utils": "0.6.7-alpha.0",
+    "@testring/types": "0.6.7-alpha.0",
+    "@testring/utils": "0.6.7-alpha.0"
   }
 }
