--- a/packages/plugin-selenium-driver/package.json
+++ b/packages/plugin-selenium-driver/package.json
@@ -18,8 +18,9 @@
     "@testring/types": "0.6.8",
     "@types/deepmerge": "2.2.0",
     "@types/node": "18.11.18",
-    "chromedriver": "*",
+    "chromedriver": "116",
     "deepmerge": "4.2.2",
+    "extract-zip": "2.0.1",
     "selenium-server": "3.141.59",
     "webdriverio": "7.20.7"
   }
