--- a/packages/devtool-extension/package.json
+++ b/packages/devtool-extension/package.json
@@ -9,23 +9,25 @@
   },
   "author": "RingCentral",
   "license": "MIT",
+  "type": "module",
   "scripts": {
-    "build": "webpack --config webpack.config.ts",
+    "build": "cross-env NODE_OPTIONS=\"--loader ts-node/esm\" webpack --config webpack.config.ts",
     "build:watch": "webpack --config webpack.config.ts --watch --devtool inline-source-map"
   },
   "devDependencies": {
     "@testring/client-ws-transport": "0.6.8",
     "@testring/types": "0.6.8",
     "@testring/utils": "0.6.8",
-    "@types/chrome": "0.0.208",
-    "@types/webpack": "5.28.0",
-    "chrome-launcher": "0.15.1",
+    "@types/chrome": "0.0.254",
+    "@types/webpack": "5.28.5",
+    "chrome-launcher": "1.1.0",
     "copy-webpack-plugin": "11.0.0",
+    "cross-env": "7.0.3",
     "os-browserify": "0.3.0",
     "path-browserify": "1.0.1",
-    "ts-loader": "9.4.2",
-    "ts-node": "10.9.1",
-    "webpack": "5.75.0",
-    "webpack-cli": "5.0.1"
+    "ts-loader": "9.5.1",
+    "ts-node": "10.9.2",
+    "webpack": "5.89.0",
+    "webpack-cli": "5.1.4"
   }
 }
