--- a/packages/devtool-extension/.mocharc.json
+++ b/packages/devtool-extension/.mocharc.json
@@ -1,5 +1,6 @@
 {
   "require" : "../../utils/ts-mocha.js",
+  "loader": "ts-node/esm",
   "watch-extensions":"ts",
   "timeout": 30000,
   "reporter": "dot",
