--- a/packages/devtool-extension/tsconfig.json
+++ b/packages/devtool-extension/tsconfig.json
@@ -1,11 +1,7 @@
 {
-  "ts-node": {
-    "esm": true,
-    "experimentalSpecifierResolution": "node"
-  },
   "compilerOptions": {
     "target": "es2015",
-    "module": "ESNext",
+    "module": "commonjs",
     "allowJs": false,
     "noEmitOnError": true,
     "moduleResolution": "node",
