--- a/packages/plugin-selenium-driver/package.json
+++ b/packages/plugin-selenium-driver/package.json
@@ -13,6 +13,7 @@
     "@nullcc/code-coverage-client": "1.4.2",
     "@testring/child-process": "0.6.11",
     "@testring/devtool-extension": "0.6.11",
+    "@testring/dwnld-collector-crx": "0.6.11",
     "@testring/logger": "0.6.11",
     "@testring/plugin-api": "0.6.11",
     "@testring/types": "0.6.11",
