Fix webpack build error in devtool-frontend

--- a/packages/devtool-frontend/tsconfig.json
+++ b/packages/devtool-frontend/tsconfig.json
@@ -22,12 +22,7 @@
     "strictNullChecks": true,
     "removeComments": false,
     "esModuleInterop": true,
-    "jsx": "react",
-    "typeRoots": [
-      "./node_modules/@types",
-      "../../node_modules/@types",
-      "./types"
-    ]
+    "jsx": "react"
   },
   "include": [
     "*.ts",
