--- a/packages/devtool-extension/tsconfig.json
+++ b/packages/devtool-extension/tsconfig.json
@@ -21,7 +21,8 @@
 
     "noUnusedLocals": true,
     "strictNullChecks": true,
-    "removeComments": false
+    "removeComments": false,
+    "esModuleInterop": true,
   },
   "include": [
     "*.ts",
