Enable esModuleInterop for importnig commonjs modules

--- a/core/logger/tsconfig.json
+++ b/core/logger/tsconfig.json
@@ -21,7 +21,9 @@
 
     "noUnusedLocals": true,
     "strictNullChecks": true,
-    "removeComments": false
+    "removeComments": false,
+    "moduleDetection": "force",
+    "esModuleInterop": true
   },
   "include": [
     "*.ts",
