--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,7 +14,7 @@ jobs:
   build:
     strategy:
       matrix:
-        node-version: [16, 18]
+        node-version: [16, 18, 22]
         os: [ubuntu-latest, macos-latest]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
