--- a/packages/plugin-selenium-driver/package.json
+++ b/packages/plugin-selenium-driver/package.json
@@ -23,7 +23,7 @@
     "deepmerge": "4.3.1",
     "selenium-server": "3.141.59",
     "webdriverio": "9.2.6",
-    "@wdio/types": "^9.2.2",
-    "puppeteer-core": "^22.3.0"
+    "@wdio/types": "9.2.2",
+    "puppeteer-core": "22.3.0"
   }
 }
