--- a/core/fs-reader/package.json
+++ b/core/fs-reader/package.json
@@ -10,7 +10,7 @@
   "author": "RingCentral",
   "license": "MIT",
   "scripts": {
-    "test:perfomance": "mocha --performance --reporter spec"
+    "test:performance": "mocha --performance --reporter spec"
   },
   "dependencies": {
     "@testring/logger": "0.6.13",
