--- a/core/async-assert/package.json
+++ b/core/async-assert/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@testring/async-assert",
-  "version": "0.6.13",
+  "version": "0.6.14-alpha.0",
   "description": "an async wrapper around chai",
   "keywords": [
     "assert"
@@ -21,7 +21,7 @@
     "url": "https://github.com/ringcentral/testring/issues"
   },
   "dependencies": {
-    "@testring/types": "0.6.13",
+    "@testring/types": "0.6.14-alpha.0",
     "chai": "4.3.10"
   }
 }
