--- a/core/async-breakpoints/package.json
+++ b/core/async-breakpoints/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@testring/async-breakpoints",
-  "version": "0.6.13",
+  "version": "0.6.14-alpha.0",
   "main": "./dist/index.js",
   "types": "./src/index.ts",
   "repository": {
