--- a/core/transport/package.json
+++ b/core/transport/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@testring/transport",
-  "version": "0.6.13",
+  "version": "0.6.14-alpha.0",
   "main": "./dist/index.js",
   "types": "./src/index.ts",
   "repository": {
@@ -10,9 +10,9 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/child-process": "0.6.13",
-    "@testring/types": "0.6.13",
-    "@testring/utils": "0.6.13",
+    "@testring/child-process": "0.6.14-alpha.0",
+    "@testring/types": "0.6.14-alpha.0",
+    "@testring/utils": "0.6.14-alpha.0",
     "@types/node": "22.8.5"
   }
 }
