--- a/core/types/package.json
+++ b/core/types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@testring/types",
-  "version": "0.6.13",
+  "version": "0.6.14-alpha.0",
   "main": "./dist/index.js",
   "types": "./src/index.ts",
   "repository": {
