--- a/core/utils/package.json
+++ b/core/utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@testring/utils",
-  "version": "0.6.13",
+  "version": "0.6.14-alpha.0",
   "main": "./dist/index.js",
   "types": "./src/index.ts",
   "repository": {
@@ -10,7 +10,7 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/types": "0.6.13",
+    "@testring/types": "0.6.14-alpha.0",
     "@types/bytes": "3.1.4",
     "@types/nanoid": "3.0.0",
     "@types/node": "22.8.5",
