--- a/packages/devtool-frontend/package.json
+++ b/packages/devtool-frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@testring/devtool-frontend",
-  "version": "0.6.13",
+  "version": "0.6.14-alpha.0",
   "main": "./index.js",
   "repository": {
     "type": "git",
@@ -13,8 +13,8 @@
     "build:watch": "webpack --config webpack.config.ts --watch --devtool inline-source-map"
   },
   "devDependencies": {
-    "@testring/client-ws-transport": "0.6.13",
-    "@testring/types": "0.6.13",
+    "@testring/client-ws-transport": "0.6.14-alpha.0",
+    "@testring/types": "0.6.14-alpha.0",
     "@types/react": "18.3.12",
     "@types/react-dom": "18.3.1",
     "@types/webpack": "5.28.5",
