--- a/packages/http-api/package.json
+++ b/packages/http-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@testring/http-api",
-  "version": "0.6.13",
+  "version": "0.6.14-alpha.0",
   "main": "./dist/index.js",
   "types": "./src/index.ts",
   "repository": {
@@ -10,12 +10,12 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/logger": "0.6.13",
-    "@testring/pluggable-module": "0.6.13",
-    "@testring/test-utils": "0.6.13",
-    "@testring/transport": "0.6.13",
-    "@testring/types": "0.6.13",
-    "@testring/utils": "0.6.13",
+    "@testring/logger": "0.6.14-alpha.0",
+    "@testring/pluggable-module": "0.6.14-alpha.0",
+    "@testring/test-utils": "0.6.14-alpha.0",
+    "@testring/transport": "0.6.14-alpha.0",
+    "@testring/types": "0.6.14-alpha.0",
+    "@testring/utils": "0.6.14-alpha.0",
     "@types/node": "22.8.5",
     "@types/request-promise-native": "1.0.21",
     "@types/tough-cookie": "4.0.5",
