--- a/packages/plugin-selenium-driver/package.json
+++ b/packages/plugin-selenium-driver/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@testring/plugin-selenium-driver",
-  "version": "0.6.13",
+  "version": "0.6.14-alpha.0",
   "main": "./dist/index.js",
   "typings": "./src/index.ts",
   "repository": {
@@ -11,19 +11,19 @@
   "license": "MIT",
   "dependencies": {
     "@nullcc/code-coverage-client": "1.4.2",
-    "@testring/child-process": "0.6.13",
-    "@testring/devtool-extension": "0.6.13",
-    "@testring/dwnld-collector-crx": "0.6.13",
-    "@testring/logger": "0.6.13",
-    "@testring/plugin-api": "0.6.13",
-    "@testring/types": "0.6.13",
+    "@testring/child-process": "0.6.14-alpha.0",
+    "@testring/devtool-extension": "0.6.14-alpha.0",
+    "@testring/dwnld-collector-crx": "0.6.14-alpha.0",
+    "@testring/logger": "0.6.14-alpha.0",
+    "@testring/plugin-api": "0.6.14-alpha.0",
+    "@testring/types": "0.6.14-alpha.0",
     "@types/deepmerge": "2.2.3",
     "@types/node": "22.8.5",
+    "@wdio/types": "9.2.2",
     "chromedriver": "*",
     "deepmerge": "4.3.1",
+    "puppeteer-core": "22.3.0",
     "selenium-server": "3.141.59",
-    "webdriverio": "9.2.6",
-    "@wdio/types": "9.2.2",
-    "puppeteer-core": "22.3.0"
+    "webdriverio": "9.2.6"
   }
 }
