--- a/core/logger/tsconfig.json
+++ b/core/logger/tsconfig.json
@@ -22,8 +22,7 @@
     "noUnusedLocals": true,
     "strictNullChecks": true,
     "removeComments": false,
-    "moduleDetection": "force",
-    "esModuleInterop": true
+    "moduleDetection": "force"
   },
   "include": [
     "*.ts",
