--- a/packages/devtool-frontend/package.json
+++ b/packages/devtool-frontend/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "18.3.1",
     "@types/webpack": "5.28.5",
     "css-loader": "7.1.2",
+    "ignore-loader": "0.1.2",
     "monaco-editor-webpack-plugin": "7.1.0",
     "os-browserify": "0.3.0",
     "path-browserify": "1.0.1",
