--- a/packages/http-api/package.json
+++ b/packages/http-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@testring/http-api",
-  "version": "0.7.3",
+  "version": "0.7.4",
   "main": "./dist/index.js",
   "types": "./src/index.ts",
   "repository": {
@@ -10,17 +10,17 @@
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
-    "@testring/logger": "0.7.3",
-    "@testring/pluggable-module": "0.7.3",
-    "@testring/test-utils": "0.7.3",
-    "@testring/transport": "0.7.3",
-    "@testring/types": "0.7.3",
-    "@testring/utils": "0.7.3",
+    "@testring/logger": "0.7.4",
+    "@testring/pluggable-module": "0.7.4",
+    "@testring/test-utils": "0.7.4",
+    "@testring/transport": "0.7.4",
+    "@testring/types": "0.7.4",
+    "@testring/utils": "0.7.4",
     "@types/node": "22.8.5",
     "@types/request-promise-native": "1.0.21",
     "@types/tough-cookie": "4.0.5",
+    "request": "2.88.2",
     "request-promise-native": "1.0.9",
-    "tough-cookie": "4.1.4",
-    "request": "2.88.2"
+    "tough-cookie": "4.1.4"
   }
 }
