--- a/core/logger/tsconfig.json
+++ b/core/logger/tsconfig.json
@@ -1,36 +1,8 @@
 {
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "target": "es2015",
-    "module": "commonjs",
-    "allowJs": false,
-    "moduleResolution": "node",
-    "noFallthroughCasesInSwitch": true,
-    "allowSyntheticDefaultImports": true,
-    "preserveConstEnums": true,
-    "noEmitOnError": true,
-    "declaration": false,
-    "outDir": "dist",
-    "sourceMap": true,
-    "lib": [
-      "es5",
-      "es2015",
-      "es2016",
-      "es2017",
-      "dom"
-    ],
-
-    "noUnusedLocals": true,
-    "strictNullChecks": true,
-    "removeComments": false,
-    "moduleDetection": "force"
+    "rootDir": ".",
+    "noEmit": true
   },
-  "include": [
-    "*.ts",
-    "src/**/*.ts",
-    "src/**/*.json"
-  ],
-  "exclude": [
-    "./node_modules",
-    "../../node_modules"
-  ]
+  "include": ["src", "test"]
 }
