Refactor TypeScript configurations and enhance type safety across multiple modules by updating import statements to use 'node:process', refining type annotations, and adding new tsconfig.build.json files for various packages.

--- a/packages/web-application/tsconfig.json
+++ b/packages/web-application/tsconfig.json
@@ -2,9 +2,7 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "rootDir": ".",
-    "noEmit": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "noEmit": true
   },
   "include": ["src", "test"]
 }
