--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "test:ci": "npm run test:coverage && npm run test:e2e",
     "build": "npm run build:main && npm run build:devtool && npm run build:extension",
     "build:watch": "lerna exec --ignore=\"@testring/@(e2e-test-app|devtool-frontend|devtool-extension|ui-kit)\" --parallel -- tsc --watch --inlineSourceMap",
-    "build:main": "lerna exec --ignore=\"@testring/@(e2e-test-app|devtool-frontend|devtool-extension|ui-kit)\" -- tsc",
+    "build:main": "lerna exec --ignore=\"@testring/@(e2e-test-app|devtool-frontend|devtool-extension|ui-kit)\" -- tsc -p tsconfig.build.json",
+    "check-types:main": "lerna exec --ignore=\"@testring/@(e2e-test-app|devtool-frontend|devtool-extension|ui-kit)\" -- tsc",
     "build:devtool": "lerna run --stream --scope @testring/devtool-frontend build",
     "build:extension": "lerna run --stream --scope @testring/devtool-extension build",
     "publish:version": "lerna version --exact --yes",
