--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -6,6 +6,8 @@
       "moduleResolution": "node",
       "lib": ["ES2019", "DOM"],
       "allowJs": false,
+      "experimentalDecorators": true,
+      "emitDecoratorMetadata": true,
   
       /* Strictness */
       "strict": true,
