--- a/core/fs-reader/package.json
+++ b/core/fs-reader/package.json
@@ -10,7 +10,8 @@
   "author": "RingCentral",
   "license": "MIT",
   "scripts": {
-    "test:performance": "mocha --performance --reporter spec"
+    "test:performance": "mocha --performance --reporter spec",
+    "build": "tsc -p tsconfig.build.json"
   },
   "dependencies": {
     "@testring/logger": "0.8.1",
