--- a/core/fs-store/package.json
+++ b/core/fs-store/package.json
@@ -24,7 +24,8 @@
     "@testring/utils": "0.8.1"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "build": "tsc -p tsconfig.build.json"
   },
   "bugs": {
     "url": "https://github.com/ringcentral/testring/issues"
