--- a/core/async-assert/package.json
+++ b/core/async-assert/package.json
@@ -15,7 +15,8 @@
     "url": "git+https://github.com/ringcentral/testring.git"
   },
   "scripts": {
-    "test": "echo \"Error: run tests from root\" && exit 1"
+    "test": "echo \"Error: run tests from root\" && exit 1",
+    "build": "tsc -p tsconfig.build.json"
   },
   "bugs": {
     "url": "https://github.com/ringcentral/testring/issues"
