--- a/core/logger/package.json
+++ b/core/logger/package.json
@@ -7,6 +7,9 @@
     "type": "git",
     "url": "https://github.com/ringcentral/testring.git"
   },
+  "scripts": {
+    "build": "tsc -p tsconfig.build.json"
+  },
   "author": "RingCentral",
   "license": "MIT",
   "dependencies": {
