--- a/packages/devtool-extension/static/manifest.json
+++ b/packages/devtool-extension/static/manifest.json
@@ -1,6 +1,9 @@
 {
   "manifest_version": 2,
   "name": "TestRing",
+  "scripts": {
+    "build": "tsc -p tsconfig.build.json"
+  },
   "author": "RingCentral",
   "description": "TestRing recording extension.",
   "browser_action": {
