--- a/packages/plugin-fs-store/package.json
+++ b/packages/plugin-fs-store/package.json
@@ -19,7 +19,8 @@
     "@testring/transport": "0.8.1"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "build": "tsc -p tsconfig.build.json"
   },
   "bugs": {
     "url": "https://github.com/ringcentral/testring/issues"
